String::formatted saves 5 bytes